yoshimi 1.4.1 M

2016-11-20 Will
* Midi learn window now accessible but non-functional.
* Midi learn Gui now has some internal test structure.
* Updated docs.
* Resolved issue with learned controls not all updating :)

2016-11-19 Will
* Made a few corrections and extensions to midi learn.
* Started documenting this.
* Bugfix: reverted change that had killed midi learn :(
* More midi learn refinements.
  Tested limits & status (but no interface yet).
* Created potential GUI based on part kits.

2016-11-18 Will
* Started midi learn. Basic entries in place - not active.
  LV2 behaviour not tested yet.
* Bugfix: Vector window wasn't updated on part change.
* Many controls now midi learnable - can't be deleted.

2016-11-16 Will
* Added 'CoolSound' demo vector definition file to examples.
* Small change to ID GUI controls as MIDI-learnable.
* Updated docs.

2016-11-13
* Direct -> gui filter done (not dynfilter).
* Direct -> gui envelope basics done (not freemode).
* Updated and corrected docs.

2016-11-12 Will
* Bugfix: direct filter gain was changed by wrong control.
* Started direct -> gui filter control.
* Updated docs.

2016-11-11 Will
* Finalised CMake ncurses correction from Giovanni.
* Add more explanatory detail to earliar changes made to
  Bank/Program change in MusicIO.cpp
* Re-instated 'in place' for jack freewheeling. Wasn't in use
  when program load issue arose :(
* Small optimisation to drum mode note base frequency.

2016-11-7 Will
* Improved crossfade dynamics.
* More docs.
* Added 'CrossFade.xiz' instrument to 'examples' files.
  Included 'CrossFade.txt' description.
* Added compiler switch for Note-On time reporting.
  Needs 'Log Load times' checked in settings.

2016-11-6 Will
* Enhanced part onoff control for internal routines.
    0 = off
    1 = on
    2 = inhibit and store last
    3 = restore last
* Direct -> gui LFOs done.

2016-11-5 Will
* Direct -> gui part kits done.
* Direct -> gui part system sends done.